<resources>
    <string name="app_name">The Restaurant Finder</string>
    <string name="text_popular">Popular</string>
    <string name="text_category">Category</string>
    <string name="text_location">Nearby</string>
    <string name="text_user">User</string>
    <string name="text_call">Call</string>
    <string name="text_map">Map</string>
    <string name="text_review">Review</string>
    <string name="text_save">Save</string>
    <string-array name="Titles">
        <item>Mr</item>
        <item>Mrs</item>
        <item>Ms</item>
        <item>Miss</item>
    </string-array>
</resources>
