<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/radio_group"
        android:layout_marginBottom="5dp"></FrameLayout>

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:checkedButton="@+id/rButton_popular"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rButton_popular"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:checked="false"
            android:drawableTop="@drawable/slt_bg_popular"
            android:gravity="center"
            android:text="@string/text_popular"
            android:textColor="@color/slt_btn_color" />

        <RadioButton
            android:id="@+id/rButton_category"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/slt_bg_category"
            android:gravity="center"
            android:text="@string/text_category"
            android:textColor="@color/slt_btn_color" />

        <RadioButton
            android:id="@+id/rButton_Nearby"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/slt_bg_location"
            android:gravity="center"
            android:text="@string/text_location"
            android:textColor="@color/slt_btn_color" />

        <RadioButton
            android:id="@+id/rButton_user"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/slt_bg_user"
            android:gravity="center"
            android:text="@string/text_user"
            android:textColor="@color/slt_btn_color" />
    </RadioGroup>

</RelativeLayout>