<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_restaurant_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/rest"
    tools:context="com.groupwork.RestaurantDetails">

    <View
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:radius="10dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:background="@color/colorPrimary" />

    <TextView
        android:text="Restaurant Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/txtRestaurantName"
        android:textSize="18sp"
        android:textColor="@android:color/background_light"
       />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ratingOverall"
        style="@android:style/Widget.Holo.Light.RatingBar.Indicator"
        android:numStars="5"
        android:layout_below="@+id/txtrestaurantaddress"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="Restaurant Address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtrestaurantaddress"
        android:textSize="12sp"
        android:layout_below="@+id/txtRestaurantName"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/background_light" />

    <TextView
        android:text="Opening Times:"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:textColor="@android:color/background_light"
        android:layout_marginTop="32dp"
        android:layout_below="@+id/ratingOverall"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="Price:"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView4"
        android:layout_alignParentEnd="true"
        android:id="@+id/textView5"
        android:textColor="@android:color/background_light"
        android:layout_alignStart="@+id/ratingPrice" />

    <TextView
        android:text="Monday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_alignParentStart="true"
        android:id="@+id/textView6"
        android:textColor="@android:color/background_light"/>

    <TextView
        android:text="Tuesday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ratingPrice"
        android:layout_alignParentStart="true"
        android:id="@+id/textView7"
        android:textColor="@android:color/background_light"/>

    <TextView
        android:text="Wednesday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView7"
        android:layout_alignParentStart="true"
        android:id="@+id/textView8"
        android:textColor="@android:color/background_light"/>

    <TextView
        android:text="Thursday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView8"
        android:layout_alignParentStart="true"
        android:id="@+id/textView9"
        android:textColor="@android:color/background_light"/>

    <TextView
        android:text="Friday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView9"
        android:layout_alignParentStart="true"
        android:id="@+id/textView10"
        android:textColor="@android:color/background_light"/>

    <TextView
        android:text="9:00 - 17:00"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtmondaytime"
        android:layout_toEndOf="@+id/textView7"
        android:id="@+id/txttuesdaytime"
        android:textColor="@android:color/background_light"/>

    <TextView
        android:text="9:00 - 17:00"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txttuesdaytime"
        android:layout_toEndOf="@+id/textView8"
        android:id="@+id/txtwednesdaytime"
        android:textColor="@android:color/background_light"/>

    <TextView
        android:text="9:00 - 17:00"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtwednesdaytime"
        android:layout_toEndOf="@+id/textView9"
        android:id="@+id/txtthursdaytime"
        android:textColor="@android:color/background_light"/>

    <TextView
        android:text="9:00 - 17:00"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtthursdaytime"
        android:layout_toEndOf="@+id/textView10"
        android:id="@+id/txtfridaytime"
        android:textColor="@android:color/background_light"/>

    <TextView
        android:text="Sunday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView16"
        android:layout_alignStart="@+id/textView16"
        android:id="@+id/textView17"
        android:textColor="@android:color/background_light"/>

    <TextView
        android:text="9:00 - 17:00"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView16"
        android:layout_toEndOf="@+id/textView17"
        android:id="@+id/txtsuntime"
        android:textColor="@android:color/background_light" />

    <TextView
        android:text="9:00 - 17:00"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtmondaytime"
        android:textColor="@android:color/background_light"
        android:layout_alignBaseline="@+id/textView6"
        android:layout_alignBottom="@+id/textView6"
        android:layout_toEndOf="@+id/textView6" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:radius="10dp"
        android:background="@android:color/background_light"
        android:scrollbarSize="2dp"
        android:layout_marginTop="13dp"
        android:layout_below="@+id/ratingOverall"
        android:layout_alignParentStart="true" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:radius="2dp"
        android:background="@android:color/background_light"
        android:layout_above="@+id/radio_group"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="102dp" />

    <TextView
        android:text="Saturday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView16"
        android:textColor="@android:color/background_light"
        android:layout_below="@+id/textView10"
        android:layout_toStartOf="@+id/txtthursdaytime" />

    <TextView
        android:text="9:00 - 17:00"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtsattime"
        android:textColor="@android:color/background_light"
        android:layout_above="@+id/txtsuntime"
        android:layout_toEndOf="@+id/textView16" />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ratingPrice"
        style="@android:style/Widget.Holo.RatingBar.Small"
        android:numStars="3"
        android:layout_below="@+id/textView5"
        android:layout_alignParentEnd="true" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/rButton_popular"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <RadioButton
            android:id="@+id/rButton_popular"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:checked="false"
            android:drawableTop="@mipmap/ic_phone"
            android:gravity="center"
            android:text="@string/text_call"
            android:textColor="#929292"
            />

        <RadioButton
            android:id="@+id/rButton_category"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/slt_bg_category"
            android:gravity="center"
            android:text="@string/text_review"
            android:textColor="@color/slt_btn_color" />

        <RadioButton
            android:id="@+id/rButton_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:drawableTop="@drawable/slt_bg_location"
            android:gravity="center"
            android:text="@string/text_map"
            android:textColor="@color/slt_btn_color" />

        <RadioButton
            android:id="@+id/rButton_user"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/icon_favorite_batch_grey"
            android:gravity="center"
            android:text="@string/text_save"
            android:textColor="@color/slt_btn_color" />
    </RadioGroup>


</RelativeLayout>
